# financial-analysis-AI-assistant

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG_20250206_OPTIMIZATION.md  CLAUDE.md  Dockerfile  Dockerfile.frontend  README.md  _commit_msg.txt  docker-compose.yml  download_wheels.bat  env.template  find_page.py  pyproject.toml  requirements-docker.txt  run_test.py  scout_test.py  scout_v2.py  scout_v3.py  scout_v3_2.py  start.bat  test_debug.py  test_output.txt
cache_data/: llama_parsed_cf88566a54f0f890426292471fc3ddea_pages_49_55.md  llama_parsed_cf88566a54f0f890426292471fc3ddea_pages_50_56.md
docker/wheels/: .gitkeep
docs/: 2026-03-24-修改记录.md  2026-03-24-测试文档.md  2026-03-28-修改记录.md  2026-03-28-测试文档.md  AI财报分析助手-课程设计答辩.pptx  comparison_test_template.md  issue-pdf-text-encoding.md  qa-issues.md  【负责人】发给队友的文件说明.md  【队友】测试指南（Docker版）.md  人工测试记录表.docx  测试指南（Docker版）.docx  测试教学指南.md  软件规格说明书.md  软件规格说明书202509.doc  需求分析讨论课-AI财报分析助手-v5.pptx  需求分析讨论课-AI财报分析助手.html  需求分析讨论课-AI财报分析助手.pptx  需求分析讨论课-演讲稿与问答准备.md
frontend/: index.html  main.py
notebooks/: 01-test-pdf-parsing.ipynb  项目解析.docx
scripts/: download_docker_wheels.py  export_docker_requirements.py  install_cuda_torch.py
src/financial_report_ai_assistant/api/: analysis.py  main.py  utils.py
src/financial_report_ai_assistant/core/: agent.py
src/financial_report_ai_assistant/services/: ai_chat.py  document_parser.py  financial_calculator.py  rag_service.py
tests/: conftest.py  integration_agent_test.py  integration_test.py  integration_test_full.py
tests/api/: test_api_endpoints.py
tests/core/: test_agent_logic.py
tests/services/: test_document_parser_hybrid.py  test_financial_calculator.py  test_rag_service.py
